Respetando el diseño, imagen de break.

--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -83,11 +83,16 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="10" height="150"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vpW-4M-k9G">
+                                                    <rect key="frame" x="15" y="8" width="51" height="58"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="botonFavorito" destination="OV8-Wt-sh6" id="bLA-h8-ZvE"/>
                                             <outlet property="imagenMargen" destination="7lO-8G-2bb" id="Vwr-ef-NjE"/>
+                                            <outlet property="imagenPerfil" destination="vpW-4M-k9G" id="Qnz-A1-lpN"/>
                                             <outlet property="labelHora" destination="xkS-Fl-7bh" id="Iqc-SU-WNn"/>
                                             <outlet property="labelLugar" destination="IkK-0D-Fqd" id="a5C-Hq-sqm"/>
                                             <outlet property="labelSpeaker1" destination="TnN-Pl-8dR" id="MQ7-hB-IYi"/>
