Diseño celda speaker, patrocinador, favoritos, actividad, directiva.

--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -394,10 +394,15 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="10" height="115"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VAA-Gj-JXH">
+                                                    <rect key="frame" x="24" y="17" width="51" height="58"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imagenMargen" destination="I3f-AS-Cwp" id="JC6-AD-Q8w"/>
+                                            <outlet property="imagenPerfil" destination="VAA-Gj-JXH" id="1Mb-lO-mRn"/>
                                             <outlet property="labelHora" destination="MhD-lO-fL2" id="GhS-kS-UDO"/>
                                             <outlet property="labelLugar" destination="l5o-6l-Hg6" id="fJo-mG-9Y3"/>
                                             <outlet property="labelSpeaker1" destination="yf0-mK-hew" id="3jU-dA-vSt"/>
