--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -278,6 +278,63 @@
             </objects>
             <point key="canvasLocation" x="-3959" y="679"/>
         </scene>
+        <!--Más-->
+        <scene sceneID="a8J-6y-ykd">
+            <objects>
+                <viewController storyboardIdentifier="MoreVC" title="Más" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HlU-09-a1c" customClass="MoreVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Scf-AW-qd5"/>
+                        <viewControllerLayoutGuide type="bottom" id="j25-Sl-ebc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oTn-6I-N8w">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IFy-4g-jcb">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="65" id="xaR-e7-SPS" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xaR-e7-SPS" id="WbT-oD-Ig9" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ponente_ausente_Hombre.png" translatesAutoresizingMaskIntoConstraints="NO" id="8PA-E6-B0L">
+                                                    <rect key="frame" x="8" y="9" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="View controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pic-gr-g3U">
+                                                    <rect key="frame" x="75" y="23" width="254" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagenPerfil" destination="8PA-E6-B0L" id="qWv-16-AoK"/>
+                                            <outlet property="labelNombre" destination="Pic-gr-g3U" id="SzL-xa-Br9"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="HlU-09-a1c" id="ltE-2F-OJS"/>
+                                    <outlet property="delegate" destination="HlU-09-a1c" id="3nG-YV-PP6"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="more" id="1Tg-B2-4ur"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yj2-fh-yiq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1271.2" y="3175.8620689655177"/>
+        </scene>
         <!--Patrocindores-->
         <scene sceneID="c6K-TB-EKi">
             <objects>
@@ -775,7 +832,7 @@
             </objects>
             <point key="canvasLocation" x="-5402" y="-81"/>
         </scene>
-        <!--DirectivaVC-->
+        <!--Directiva-->
         <scene sceneID="kqf-Gz-4bu">
             <objects>
                 <viewController storyboardIdentifier="DirectivaVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="AKy-LS-Z3g" customClass="DirectivaVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
@@ -788,7 +845,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="62" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H6b-7b-lN4">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -842,7 +899,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ZAQ-qc-Exy"/>
+                    <navigationItem key="navigationItem" title="Directiva" id="ZAQ-qc-Exy">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="f5q-Jr-JGn"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="tabla" destination="H6b-7b-lN4" id="okO-3Y-xml"/>
                     </connections>
@@ -958,11 +1017,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="AV0-X7-wr5"/>
                         <segue destination="BrK-EM-h98" kind="relationship" relationship="viewControllers" id="B98-dS-GYU"/>
                         <segue destination="LGy-tf-vRe" kind="relationship" relationship="viewControllers" id="zhZ-wB-Ecj"/>
-                        <segue destination="INc-YK-7hn" kind="relationship" relationship="viewControllers" id="Fus-MX-KpB"/>
-                        <segue destination="Htp-sw-vXK" kind="relationship" relationship="viewControllers" id="3RD-sE-eOB"/>
-                        <segue destination="Zvc-Fm-Kai" kind="relationship" relationship="viewControllers" id="5Nd-3G-jDX"/>
-                        <segue destination="lyf-FD-pPX" kind="relationship" relationship="viewControllers" id="dCh-b0-g7v"/>
-                        <segue destination="ysi-Hw-smw" kind="relationship" relationship="viewControllers" id="stJ-TD-bgJ"/>
+                        <segue destination="HlU-09-a1c" kind="relationship" relationship="viewControllers" id="Aq8-jo-mS4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qge-Ow-08L" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1458,7 +1513,7 @@
         <!--Materiales-->
         <scene sceneID="ofV-GT-r56">
             <objects>
-                <viewController storyboardIdentifier="MaterialesVC" title="Materiales" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Zvc-Fm-Kai" customClass="MaterialesVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MaterialesVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Zvc-Fm-Kai" customClass="MaterialesVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="efG-U4-cHe"/>
                         <viewControllerLayoutGuide type="bottom" id="XUV-9m-KFR"/>
