--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -1533,14 +1533,21 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="62.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQK-L5-BZu">
-                                                    <rect key="frame" x="27" y="14" width="312" height="35"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ImgDoc.png" translatesAutoresizingMaskIntoConstraints="NO" id="KVX-6M-dyu">
+                                                    <rect key="frame" x="15" y="6" width="33" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Resumen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQK-L5-BZu">
+                                                    <rect key="frame" x="73" y="18" width="223" height="26"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <connections>
+                                                <outlet property="imagenPerfil" destination="KVX-6M-dyu" id="TNB-Gg-Yjc"/>
+                                            </connections>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="labelNombre" destination="YQK-L5-BZu" id="8p2-9h-XBl"/>
@@ -1661,6 +1668,7 @@
         <image name="Comite_academico.png" width="28" height="26"/>
         <image name="EstrellaTransparente.png" width="75" height="74"/>
         <image name="Estrellarellena.png" width="75" height="74"/>
+        <image name="ImgDoc.png" width="33" height="43"/>
         <image name="Ponente_ausente_Hombre.png" width="100" height="100"/>
         <image name="btn_Favoritos.png" width="34" height="33"/>
         <image name="btn_Favoritos_calor.png" width="34" height="33"/>
