--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
         <scene sceneID="eZD-zj-stE">
             <objects>
                 <navigationController storyboardIdentifier="navSociedad" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5rk-NI-f2U" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Sociedad" image="Comite_academico.png" id="VsL-7K-qtS"/>
+                    <tabBarItem key="tabBarItem" title="Sociedad" image="almuerzo.png" selectedImage="almuerzo.png" id="VsL-7K-qtS"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3LP-WN-FAI">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -408,15 +408,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="144" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qh3-IG-gaB">
-                                <rect key="frame" x="0.0" y="0.0" width="368" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="115" id="qaq-lC-ULU" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="368" height="115"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="115"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qaq-lC-ULU" id="TNo-xb-RHg">
-                                            <rect key="frame" x="0.0" y="0.0" width="368" height="114.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="114.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Charla acerca de como hacer un favorito, en otra app para sms." lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmc-ZF-1ab">
@@ -475,7 +475,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Favoritos" image="btn_Favoritos.png" selectedImage="btn_Favoritos_calor.png" id="nXx-2h-Rx2"/>
+                    <tabBarItem key="tabBarItem" title="Favoritos" image="Btn_Favoritos_azul.png" selectedImage="Btn_Favoritos_plomo.png" id="nXx-2h-Rx2"/>
                     <connections>
                         <outlet property="tabla" destination="qh3-IG-gaB" id="9Ii-fl-cc1"/>
                     </connections>
@@ -818,7 +818,7 @@
         <scene sceneID="mMJ-tU-hpP">
             <objects>
                 <navigationController storyboardIdentifier="navDirectiva" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JRK-ah-UEF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Directiva" id="hE5-2m-OJl"/>
+                    <tabBarItem key="tabBarItem" title="Directiva" image="Comite_academico.png" selectedImage="Comite_academico.png" id="hE5-2m-OJl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dS4-Am-qQm">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1526,11 +1526,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="63" id="ELh-8H-tC0" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="63"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="62" id="ELh-8H-tC0" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="62"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ELh-8H-tC0" id="lrZ-LE-Q2r" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="62.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="61.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ImgDoc.png" translatesAutoresizingMaskIntoConstraints="NO" id="KVX-6M-dyu">
@@ -1538,18 +1538,16 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Resumen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YQK-L5-BZu">
-                                                    <rect key="frame" x="73" y="18" width="223" height="26"/>
+                                                    <rect key="frame" x="76" y="23" width="223" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <connections>
-                                                <outlet property="imagenPerfil" destination="KVX-6M-dyu" id="TNB-Gg-Yjc"/>
-                                            </connections>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imagenPerfil" destination="KVX-6M-dyu" id="SAW-cn-ywV"/>
                                             <outlet property="labelNombre" destination="YQK-L5-BZu" id="8p2-9h-XBl"/>
                                         </connections>
                                     </tableViewCell>
@@ -1660,6 +1658,8 @@
     </scenes>
     <resources>
         <image name="Back_Arrow.png" width="13" height="22"/>
+        <image name="Btn_Favoritos_azul.png" width="25" height="23"/>
+        <image name="Btn_Favoritos_plomo.png" width="25" height="23"/>
         <image name="Btn_favoritos_SinMarcar.png" width="30" height="29"/>
         <image name="Btn_ponentes_azul.png" width="22" height="23"/>
         <image name="Btn_ponentes_plomo.png" width="22" height="23"/>
@@ -1670,8 +1670,7 @@
         <image name="Estrellarellena.png" width="75" height="74"/>
         <image name="ImgDoc.png" width="33" height="43"/>
         <image name="Ponente_ausente_Hombre.png" width="100" height="100"/>
-        <image name="btn_Favoritos.png" width="34" height="33"/>
-        <image name="btn_Favoritos_calor.png" width="34" height="33"/>
+        <image name="almuerzo.png" width="30" height="35"/>
         <image name="menu.png" width="25" height="19"/>
         <image name="menu_azul.png" width="25" height="19"/>
         <image name="next Arrow.png" width="13" height="22"/>
