--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
         <scene sceneID="eZD-zj-stE">
             <objects>
                 <navigationController storyboardIdentifier="navSociedad" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5rk-NI-f2U" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Sociedad" image="almuerzo.png" selectedImage="almuerzo.png" id="VsL-7K-qtS"/>
+                    <tabBarItem key="tabBarItem" title="Sociedad" image="icono_ociedad_plomo.png" selectedImage="icono_ociedad_azul.png" id="VsL-7K-qtS"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3LP-WN-FAI">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1683,7 +1683,8 @@
         <image name="Estrellarellena.png" width="75" height="74"/>
         <image name="ImgDoc.png" width="33" height="43"/>
         <image name="Ponente_ausente_Hombre.png" width="100" height="100"/>
-        <image name="almuerzo.png" width="30" height="35"/>
+        <image name="icono_ociedad_azul.png" width="28" height="23"/>
+        <image name="icono_ociedad_plomo.png" width="28" height="23"/>
         <image name="menu.png" width="25" height="19"/>
         <image name="menu_azul.png" width="25" height="19"/>
         <image name="next Arrow.png" width="13" height="22"/>
